<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/camera_relative"
    tools:context=".fragment.CameraFragment">

    <org.yl.mycamera.ui.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="match_parent" />

    <org.yl.mycamera.ui.FaceView
        android:id="@+id/faceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <include layout="@layout/focus_area"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_fifty"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/flash_light"
                android:layout_width="50dp"
                android:layout_height="@dimen/length_fifty"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:src="@drawable/ic_flash_light"
                android:visibility="visible" />

            <TextView
                android:id="@+id/scale"
                android:layout_width="@dimen/tv_max_width"
                android:layout_height="@dimen/tv_height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/scale_border"
                android:gravity="center"
                android:text="@string/scale_four_three"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/scale_textSize" />

            <ImageView
                android:id="@+id/face_switch"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/ic_face_off"
                android:text="@string/scale_four_three"
                android:textColor="@color/colorWhite" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="@dimen/length_fifty"
                android:layout_height="@dimen/length_fifty"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_setting" />

        </RelativeLayout>
    </FrameLayout>

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/control"
        android:background="@color/black"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/for_nothing"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center" />

            <TextView
                android:id="@+id/for_camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|right"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pictures"
                android:textColor="#FFC107"
                android:textSize="@dimen/home_screen_size" />

            <TextView
                android:id="@+id/for_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/video"
                android:textColor="#BDBDBD"
                android:textSize="@dimen/home_screen_size" />
            <TextView
                android:id="@+id/for_panorama"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/panorama"
                android:textColor="#BDBDBD"
                android:textSize="@dimen/home_screen_size" />

            <TextView
                android:id="@+id/for_beauty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/portrait"
                android:textColor="#BDBDBD"
                android:textSize="15dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:visibility="visible">

        <ImageView
            android:id="@+id/image_save"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/thumbnail_margin_gap" />

        <ImageView
            android:id="@+id/capture"
            android:layout_width="@dimen/picture_radius"
            android:layout_height="@dimen/picture_radius"
            android:layout_gravity="center"
            android:src="@drawable/selector_camera_btn" />

        <ImageView
            android:id="@+id/camera_rotation"
            android:layout_width="@dimen/side_length"
            android:layout_height="@dimen/side_length"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="@dimen/thumbnail_margin_gap"
            android:src="@drawable/selector_switch_btn" />
    </FrameLayout>






</RelativeLayout>